@@ -658,6 +658,11 @@ purposes.
 
 *** System ***
 
+* Session ROOT specifications support explicit 'document_files' for
+robust dependencies on LaTeX sources.  Only these explicitly given
+files are copied to the document output directory, before document
+processing is started.
+
 * Simplified "isabelle display" tool.  Settings variables DVI_VIEWER
 and PDF_VIEWER now refer to the actual programs, not shell
 command-lines.  Discontinued option -c: invocation may be asynchronous
